avances sección about y portafolio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		    <a href="#services" class="btn-home"><strong>TELL ME MORE</strong></a> 	
 	    </div>
 	</section>
-   
+   <!--Services -->
     <section class="about" id="inicio">
         <h1 class="text-uppercase"><strong>services</strong></h1>
         <p><i>Lorem ipsum dolor sit amet</i></p>
@@ -64,7 +64,7 @@
           		</div>
           		<div class="col-lg-4 col-sm-6 col-xs-12 about-item">
             		<span class="fa fa-group"></span>
-            		<h2>Nuestro Equipo </h2>
+            		<h2>Responsive Design </h2>
            			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis libero et tenetur possimus alias iusto quaerat tempore nesciunt repudiandae placeat vel numquam. Nam!</p>
           		</div>
           		<div class="clearfix visible-md-block visible-sm-block"></div>
@@ -75,10 +75,135 @@
           		</div>
        		</div>
       	</div>
-    </section>
-<!--Services -->
 <!--Portafolio -->
+	<section class="container testimonios">
+		<div class="row">
+			<div class="col-md-12 col-sm-12">
+				<h1 class="text-center text-uppercase"><strong>Portafolio</strong></h1><br><br>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-12">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="assets/img/roundicons.png" alt="Lights">
+						<div class="caption">
+							<h2>Round Icons</h2>
+							<p></p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="assets/img/startup-framework.png" alt="Lights">
+						<div class="caption">
+							<h2>Starup Framework</h2>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="assets/img/treehouse.png" alt="Lights">
+						<div class="caption">
+							<h2>Treehouse</h2>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-12">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="assets/img/golden.png" alt="Lights">
+						<div class="caption">
+							<h2>Golden</h2>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="assets/img/escape.png" alt="Lights">
+						<div class="caption">
+							<h2>Escape</h2>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="assets/img/dreams.png" alt="Lights">
+						<div class="caption">
+							<h2>Dreams</h2>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
 <!--About -->
+    <section id="about">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+					<h2 class="text-uppercase">about</h2>
+					<p>Lorem ipsum dolor sit amet</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-md-offset-1 col-md-9 col-xs-9 text-right">
+					<h4>2009-2011<br>Our Humble Beginnings</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid sed numquam modi, quaerat quia, voluptatem maxime officiis maiores neque. Quo mollitia incidunt, debitis nemo doloremque, voluptatum cum dolorem. Laboriosam, nisi.</p>
+				</div>
+				<div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
+					<img src="assets/img/1.jpg" alt="" class="img-responsive">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-5 col-md-2 col-md-offset-5 col-sm-3 col-xs-3">
+					<img src="assets/img/2.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-lg-4 col-md-4 col-md-9 col-xs-9">
+					<h4>MARCH 2011<br> An Agency is Born</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto provident fugiat possimus ab eius quidem, quisquam. Illum doloremque nihil harum asperiores dignissimos delectus saepe sequi a, unde, nesciunt maxime. Eaque!.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-md-offset-1 col-md-9 col-xs-9 text-right">
+					<h4>DECEMBER 2012<br>Transition to Full Service</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, natus, laborum. Tempora beatae, cumque vel, velit ratione enim doloremque facilis placeat exercitationem culpa! Voluptatem perferendis voluptatum quas soluta corporis sequi.</p>
+				</div>
+				<div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
+					<img src="assets/img/3.jpg" alt="" class="img-responsive">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-5 col-md-2 col-md-offset-5 col-sm-3 col-xs-3">
+					<img src="assets/img/4.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-lg-4 col-md-4 col-md-9 col-xs-9">
+					<h4>July 2014<br>Phase Two Expansion</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur commodi temporibus debitis iusto illum dolorum aliquam optio tempore, nobis ut. Nesciunt dignissimos soluta laborum, natus quod consequatur vitae similique! Nobis.</p>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+    <div class="row">
+        <div class="col-md-12 block">
+            <div class="circle">
+                <h3 class="text-uppercase">be part<br>of our<br>story</h3>
+            </div>
+        </div>
+    </div>
+</div>
+	</section>
 <!--Team -->
 <!--Contacto -->
 
